test/good/tuples/decl01.px

Int*String t = 1, "abc"
print t
