test/bad/tuples/decl02.px

Int*Bool*Char t = 1, true
